Agregue favicon, cambio los entornos de desarrollo, baje la calidad de las imagenes

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 mongoURL=mongodb+srv://admin:XCDvZvauvbmzBWRz@questionsandanswers.30z22.mongodb.net/Q&As?retryWrites=true&w=majority
 SECRET_JWT_SEED=wd203-2fela-kacaaq.-quwcmsofpk26HOWDpwa
+APIURL=http://localhost:3000/api
