--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-mongoURL=mongodb+srv://admin:XCDvZvauvbmzBWRz@questionsandanswers.30z22.mongodb.net/Q&As?retryWrites=true&w=majority
-SECRET_JWT_SEED=wd203-2fela-kacaaq.-quwcmsofpk26HOWDpwa
+mongoURL=mongodb://localhost:27017/askme
+SECRET_JWT_SEED=ajshjkdaljkkj
 APIURL=http://localhost:3000/api
